--- a/environment/requirements.txt
+++ b/environment/requirements.txt
@@ -98,7 +98,7 @@ pycparser==2.21
 pyflakes==3.1.0
 Pygments==2.16.1
 pylint==2.17.5
-pyparsing==3.1.1
+pyparsing<3.1,>=2.3.1
 pyproj==3.6.0
 python-dateutil==2.8.2
 python-json-logger==2.0.7
